--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.1.1",
+    "@vercel/analytics": "^1.1.2",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
