--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.1.1",
     "@vercel/analytics": "^1.1.2",
-    "next": "14.1.0",
+    "next": "^14.2.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18"
